Bug 1186164 - When clearing the overscroll animation state, make sure GetOverscroll() continues to reflect the correct direction of overscroll. r=Cwiiis

--HG--
extra : rebase_source : 76c23906f6dcd3a084d1a9536340abccebe2e75d